tests/NormalTests/paczka1/fuzzy1/29052939.err
Error in line 2: HF8WS A792 77,2
Error in line 7: S483 S483 72,2
Error in line 12: 5gxsGJ A902 -3,4
Error in line 1: 5gxsGJ A902 85,9
Error in line 4: NRJLybxTd S246 68,6
Error in line 21: NRJLybxTd A792 57,4
Error in line 15: P8gaYTvO9nm S483 52,9
Error in line 30: P8gaYTvO9nm S246 90,8
Error in line 31: P8gaYTvO9nm A902 52,4
Error in line 36: MXtZ4hixj0 A792 91,9
